solve the overlapping problem

--- a/client/src/components/Tetris.css
+++ b/client/src/components/Tetris.css
@@ -1,3 +1,3 @@
 .wrap{
-    min-width:1000px;
+    min-width:1100px;
     }
